// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImportJavaClasses component tests Should close Modal after opening it and clicking on the Cancel button 1`] = `
<body
  class=""
>
  <div>
    <button
      aria-disabled="false"
      class="pf-c-button pf-m-secondary"
      data-ouia-component-id="OUIA-Generated-Button-secondary-13"
      data-ouia-component-type="PF4/Button"
      data-ouia-safe="true"
      data-testid="modal-wizard-button"
      type="button"
    >
      Import Java classes
    </button>
  </div>
  <div />
</body>
`;

exports[`ImportJavaClasses component tests Should search box with results works 1`] = `
<body
  class="pf-c-backdrop__open"
>
  <div
    aria-hidden="true"
  >
    <button
      aria-disabled="false"
      class="pf-c-button pf-m-secondary"
      data-ouia-component-id="OUIA-Generated-Button-secondary-10"
      data-ouia-component-type="PF4/Button"
      data-ouia-safe="true"
      data-testid="modal-wizard-button"
      type="button"
    >
      Import Java classes
    </button>
  </div>
  <div>
    <div
      class="pf-c-backdrop"
    >
      <div
        class="pf-l-bullseye"
      >
        <div
          aria-describedby="pf-wizard-description-3"
          aria-labelledby="pf-wizard-title-3"
          aria-modal="true"
          class="pf-c-modal-box pf-m-lg"
          data-ouia-component-id="OUIA-Generated-Modal-large-4"
          data-ouia-component-type="PF4/ModalContent"
          data-ouia-safe="true"
          id="pf-modal-part-3"
          role="dialog"
        >
          
          <div
            class="pf-c-wizard"
          >
            <div
              class="pf-c-wizard__header"
            >
              <button
                aria-disabled="false"
                aria-label="Close"
                class="pf-c-button pf-m-plain pf-c-wizard__close"
                data-ouia-component-id="OUIA-Generated-Button-plain-4"
                data-ouia-component-type="PF4/Button"
                data-ouia-safe="true"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 352 512"
                  width="1em"
                >
                  <path
                    d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                  />
                </svg>
              </button>
              <h2
                aria-label="Import Java classes"
                class="pf-c-title pf-m-3xl pf-c-wizard__title"
                id="pf-wizard-title-3"
              >
                Import Java classes
              </h2>
              <p
                class="pf-c-wizard__description"
                id="pf-wizard-description-3"
              >
                It converts your Java assets to DMN types. This is a one-time import action: if the Java class get updated, you will need to reimport it
              </p>
            </div>
            <button
              aria-expanded="false"
              aria-label="Wizard Toggle"
              class="pf-c-wizard__toggle"
            >
              <ol
                class="pf-c-wizard__toggle-list"
              >
                <li
                  class="pf-c-wizard__toggle-list-item"
                >
                  <span
                    class="pf-c-wizard__toggle-num"
                  >
                    1
                  </span>
                   
                  Select Java classes
                </li>
              </ol>
              <span
                class="pf-c-wizard__toggle-icon"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 320 512"
                  width="1em"
                >
                  <path
                    d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                  />
                </svg>
              </span>
            </button>
            <div
              class="pf-c-wizard__outer-wrap"
            >
              <div
                class="pf-c-wizard__inner-wrap"
              >
                <nav
                  aria-labelledby="pf-wizard-title-3"
                  class="pf-c-wizard__nav"
                >
                  <ol
                    class="pf-c-wizard__nav-list"
                  >
                    <li
                      class="pf-c-wizard__nav-item"
                    >
                      <button
                        aria-current="page"
                        class="pf-c-wizard__nav-link pf-m-current"
                      >
                        Select Java classes
                      </button>
                    </li>
                    <li
                      class="pf-c-wizard__nav-item"
                    >
                      <button
                        aria-current="false"
                        class="pf-c-wizard__nav-link"
                      >
                        Cherry-pick fields
                      </button>
                    </li>
                    <li
                      class="pf-c-wizard__nav-item"
                    >
                      <button
                        aria-current="false"
                        aria-disabled="true"
                        class="pf-c-wizard__nav-link pf-m-disabled"
                        disabled=""
                      >
                        Review
                      </button>
                    </li>
                  </ol>
                </nav>
                <main
                  aria-labelledby="pf-wizard-title-3"
                  class="pf-c-wizard__main"
                >
                  <div
                    class="pf-c-wizard__main-body"
                  >
                    <h6
                      class="pf-c-title pf-m-md"
                    >
                      Search:
                    </h6>
                    <div
                      class="pf-c-search-input"
                    >
                      <div
                        class="pf-c-input-group"
                      >
                        <div
                          class="pf-c-search-input__bar"
                        >
                          <span
                            class="pf-c-search-input__text"
                          >
                            <span
                              class="pf-c-search-input__icon"
                            >
                              <svg
                                aria-hidden="true"
                                fill="currentColor"
                                height="1em"
                                role="img"
                                style="vertical-align: -0.125em;"
                                viewBox="0 0 512 512"
                                width="1em"
                              >
                                <path
                                  d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                                />
                              </svg>
                            </span>
                            <input
                              aria-label="Search input"
                              class="pf-c-search-input__text-input"
                              placeholder="Search a class name ..."
                              value="test"
                            />
                          </span>
                          <span
                            class="pf-c-search-input__utilities"
                          >
                            <span
                              class="pf-c-search-input__clear"
                            >
                              <button
                                aria-disabled="false"
                                aria-label="Reset"
                                class="pf-c-button pf-m-plain"
                                data-ouia-component-id="OUIA-Generated-Button-plain-5"
                                data-ouia-component-type="PF4/Button"
                                data-ouia-safe="true"
                                type="button"
                              >
                                <svg
                                  aria-hidden="true"
                                  fill="currentColor"
                                  height="1em"
                                  role="img"
                                  style="vertical-align: -0.125em;"
                                  viewBox="0 0 352 512"
                                  width="1em"
                                >
                                  <path
                                    d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                                  />
                                </svg>
                              </button>
                            </span>
                          </span>
                        </div>
                      </div>
                    </div>
                    <ul
                      aria-label="class-data-list"
                      class="pf-c-data-list pf-m-compact pf-m-grid-md"
                    >
                      <li
                        aria-labelledby=""
                        class="pf-c-data-list__item"
                        id=""
                        name="com.Book"
                      >
                        <div
                          class="pf-c-data-list__item-row"
                        >
                          <div
                            class="pf-c-data-list__item-control"
                          >
                            <div
                              class="pf-c-data-list__check"
                            >
                              <input
                                aria-invalid="false"
                                aria-labelledby="com.Book"
                                checked=""
                                rowid=""
                                type="checkbox"
                              />
                            </div>
                          </div>
                          <div
                            class="pf-c-data-list__cell"
                            rowid=""
                          >
                            <span
                              id="com.Book"
                            >
                              com.Book
                            </span>
                          </div>
                        </div>
                      </li>
                      <li
                        aria-labelledby=""
                        class="pf-c-data-list__item"
                        id=""
                        name="com.Author"
                      >
                        <div
                          class="pf-c-data-list__item-row"
                        >
                          <div
                            class="pf-c-data-list__item-control"
                          >
                            <div
                              class="pf-c-data-list__check"
                            >
                              <input
                                aria-invalid="false"
                                aria-labelledby="com.Author"
                                rowid=""
                                type="checkbox"
                              />
                            </div>
                          </div>
                          <div
                            class="pf-c-data-list__cell"
                            rowid=""
                          >
                            <span
                              id="com.Author"
                            >
                              com.Author
                            </span>
                          </div>
                        </div>
                      </li>
                    </ul>
                  </div>
                </main>
              </div>
              <footer
                class="pf-c-wizard__footer"
              >
                <button
                  aria-disabled="false"
                  class="pf-c-button pf-m-primary"
                  data-ouia-component-id="OUIA-Generated-Button-primary-3"
                  data-ouia-component-type="PF4/Button"
                  data-ouia-safe="true"
                  type="submit"
                >
                  Next
                </button>
                <div
                  class="pf-c-wizard__footer-cancel"
                >
                  <button
                    aria-disabled="false"
                    class="pf-c-button pf-m-link"
                    data-ouia-component-id="OUIA-Generated-Button-link-3"
                    data-ouia-component-type="PF4/Button"
                    data-ouia-safe="true"
                    type="button"
                  >
                    Cancel
                  </button>
                </div>
              </footer>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`ImportJavaClasses component tests Should show Modal after clicking on the button 1`] = `
<body
  class="pf-c-backdrop__open"
>
  <div
    aria-hidden="true"
  >
    <button
      aria-disabled="false"
      class="pf-c-button pf-m-secondary"
      data-ouia-component-id="OUIA-Generated-Button-secondary-3"
      data-ouia-component-type="PF4/Button"
      data-ouia-safe="true"
      data-testid="modal-wizard-button"
      type="button"
    >
      Import Java classes
    </button>
  </div>
  <div>
    <div
      class="pf-c-backdrop"
    >
      <div
        class="pf-l-bullseye"
      >
        <div
          aria-describedby="pf-wizard-description-1"
          aria-labelledby="pf-wizard-title-1"
          aria-modal="true"
          class="pf-c-modal-box pf-m-lg"
          data-ouia-component-id="OUIA-Generated-Modal-large-2"
          data-ouia-component-type="PF4/ModalContent"
          data-ouia-safe="true"
          id="pf-modal-part-1"
          role="dialog"
        >
          
          <div
            class="pf-c-wizard"
          >
            <div
              class="pf-c-wizard__header"
            >
              <button
                aria-disabled="false"
                aria-label="Close"
                class="pf-c-button pf-m-plain pf-c-wizard__close"
                data-ouia-component-id="OUIA-Generated-Button-plain-1"
                data-ouia-component-type="PF4/Button"
                data-ouia-safe="true"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 352 512"
                  width="1em"
                >
                  <path
                    d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                  />
                </svg>
              </button>
              <h2
                aria-label="Import Java classes"
                class="pf-c-title pf-m-3xl pf-c-wizard__title"
                id="pf-wizard-title-1"
              >
                Import Java classes
              </h2>
              <p
                class="pf-c-wizard__description"
                id="pf-wizard-description-1"
              >
                It converts your Java assets to DMN types. This is a one-time import action: if the Java class get updated, you will need to reimport it
              </p>
            </div>
            <button
              aria-expanded="false"
              aria-label="Wizard Toggle"
              class="pf-c-wizard__toggle"
            >
              <ol
                class="pf-c-wizard__toggle-list"
              >
                <li
                  class="pf-c-wizard__toggle-list-item"
                >
                  <span
                    class="pf-c-wizard__toggle-num"
                  >
                    1
                  </span>
                   
                  Select Java classes
                </li>
              </ol>
              <span
                class="pf-c-wizard__toggle-icon"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 320 512"
                  width="1em"
                >
                  <path
                    d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                  />
                </svg>
              </span>
            </button>
            <div
              class="pf-c-wizard__outer-wrap"
            >
              <div
                class="pf-c-wizard__inner-wrap"
              >
                <nav
                  aria-labelledby="pf-wizard-title-1"
                  class="pf-c-wizard__nav"
                >
                  <ol
                    class="pf-c-wizard__nav-list"
                  >
                    <li
                      class="pf-c-wizard__nav-item"
                    >
                      <button
                        aria-current="page"
                        class="pf-c-wizard__nav-link pf-m-current"
                      >
                        Select Java classes
                      </button>
                    </li>
                    <li
                      class="pf-c-wizard__nav-item"
                    >
                      <button
                        aria-current="false"
                        aria-disabled="true"
                        class="pf-c-wizard__nav-link pf-m-disabled"
                        disabled=""
                      >
                        Cherry-pick fields
                      </button>
                    </li>
                    <li
                      class="pf-c-wizard__nav-item"
                    >
                      <button
                        aria-current="false"
                        aria-disabled="true"
                        class="pf-c-wizard__nav-link pf-m-disabled"
                        disabled=""
                      >
                        Review
                      </button>
                    </li>
                  </ol>
                </nav>
                <main
                  aria-labelledby="pf-wizard-title-1"
                  class="pf-c-wizard__main"
                >
                  <div
                    class="pf-c-wizard__main-body"
                  >
                    <h6
                      class="pf-c-title pf-m-md"
                    >
                      Search:
                    </h6>
                    <div
                      class="pf-c-search-input"
                    >
                      <div
                        class="pf-c-input-group"
                      >
                        <div
                          class="pf-c-search-input__bar"
                        >
                          <span
                            class="pf-c-search-input__text"
                          >
                            <span
                              class="pf-c-search-input__icon"
                            >
                              <svg
                                aria-hidden="true"
                                fill="currentColor"
                                height="1em"
                                role="img"
                                style="vertical-align: -0.125em;"
                                viewBox="0 0 512 512"
                                width="1em"
                              >
                                <path
                                  d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                                />
                              </svg>
                            </span>
                            <input
                              aria-label="Search input"
                              class="pf-c-search-input__text-input"
                              placeholder="Search a class name ..."
                              value=""
                            />
                          </span>
                          
                        </div>
                      </div>
                    </div>
                    <div
                      class="pf-c-empty-state"
                    >
                      <div
                        class="pf-c-empty-state__content"
                      >
                        <svg
                          aria-hidden="true"
                          class="pf-c-empty-state__icon"
                          fill="currentColor"
                          height="1em"
                          role="img"
                          style="vertical-align: -0.125em;"
                          viewBox="0 0 512 512"
                          width="1em"
                        >
                          <path
                            d="M488.6 250.2L392 214V105.5c0-15-9.3-28.4-23.4-33.7l-100-37.5c-8.1-3.1-17.1-3.1-25.3 0l-100 37.5c-14.1 5.3-23.4 18.7-23.4 33.7V214l-96.6 36.2C9.3 255.5 0 268.9 0 283.9V394c0 13.6 7.7 26.1 19.9 32.2l100 50c10.1 5.1 22.1 5.1 32.2 0l103.9-52 103.9 52c10.1 5.1 22.1 5.1 32.2 0l100-50c12.2-6.1 19.9-18.6 19.9-32.2V283.9c0-15-9.3-28.4-23.4-33.7zM358 214.8l-85 31.9v-68.2l85-37v73.3zM154 104.1l102-38.2 102 38.2v.6l-102 41.4-102-41.4v-.6zm84 291.1l-85 42.5v-79.1l85-38.8v75.4zm0-112l-102 41.4-102-41.4v-.6l102-38.2 102 38.2v.6zm240 112l-85 42.5v-79.1l85-38.8v75.4zm0-112l-102 41.4-102-41.4v-.6l102-38.2 102 38.2v.6z"
                          />
                        </svg>
                        <h6
                          class="pf-c-title pf-m-md"
                        >
                          No Java classes selected
                        </h6>
                        <div
                          class="pf-c-empty-state__body"
                        >
                          Type the Java class name or part of the name to find the one you want to import
                        </div>
                      </div>
                    </div>
                  </div>
                </main>
              </div>
              <footer
                class="pf-c-wizard__footer"
              >
                <button
                  aria-disabled="true"
                  class="pf-c-button pf-m-primary pf-m-disabled"
                  data-ouia-component-id="OUIA-Generated-Button-primary-1"
                  data-ouia-component-type="PF4/Button"
                  data-ouia-safe="true"
                  disabled=""
                  type="submit"
                >
                  Next
                </button>
                <div
                  class="pf-c-wizard__footer-cancel"
                >
                  <button
                    aria-disabled="false"
                    class="pf-c-button pf-m-link"
                    data-ouia-component-id="OUIA-Generated-Button-link-1"
                    data-ouia-component-type="PF4/Button"
                    data-ouia-safe="true"
                    type="button"
                  >
                    Cancel
                  </button>
                </div>
              </footer>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`ImportJavaClasses component tests should render ImportJavaClasses Button component 1`] = `
<div>
  <button
    aria-disabled="false"
    class="pf-c-button pf-m-secondary"
    data-ouia-component-id="OUIA-Generated-Button-secondary-1"
    data-ouia-component-type="PF4/Button"
    data-ouia-safe="true"
    data-testid="modal-wizard-button"
    type="button"
  >
    Import Java classes
  </button>
</div>
`;
